; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/bsd/remote/extr_234.c_longToChar.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/bsd/remote/extr_234.c_longToChar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @longToChar(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  store i64 %0, i64* %2, align 8
  %4 = call i64 @xmalloc(i32 9)
  %5 = inttoptr i64 %4 to i8*
  store i8* %5, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i32 @memcpy(i8* %6, i64* %2, i32 8)
  %8 = load i8*, i8** %3, align 8
  %9 = getelementptr inbounds i8, i8* %8, i64 8
  store i8 0, i8* %9, align 1
  %10 = load i8*, i8** %3, align 8
  ret i8* %10
}

declare dso_local i64 @xmalloc(i32) #1

declare dso_local i32 @memcpy(i8*, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
